# ml-interview-assessment

./: README.md  app.py  pyproject.toml  requirements.txt  runtime.txt
.streamlit/: config.toml  secrets.toml
assets/: style.css
data/: questions.json  rubric_data.json
utils/: memory_manager.py  nonverbal_analysis.py  scoring_logic.py  stt_processor.py
