[project]
name = "ai-interview-assessment"
version = "1.0.0"
description = "AI Interview Assessment System"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
dependencies = [
    "streamlit==1.28.0",
    "torch==2.1.0",
    "torchvision==0.16.0",
    "torchaudio==2.1.0",
    "faster-whisper==0.10.0",
    "sentence-transformers==2.2.2",
    "librosa==0.10.0.post2",
    "soundfile==0.12.1",
    "noisereduce==2.0.1",
    "pydub==0.25.1",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "spellchecker==0.7.1",
    "rapidfuzz==3.6.1",
    "Pillow==10.1.0",
    "scipy==1.11.4",
    "plotly==5.17.0",
    "python-dotenv==1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools]
packages = ["utils", "data"]